--- a/lib/generators/genkan/templates/initializer.erb
+++ b/lib/generators/genkan/templates/initializer.erb
@@ -1,6 +1,6 @@
 Genkan.configure do |config|
   config.user_class_name = '<%= model_class_name %>'
-  config.auto_acceptance = false
+  config.auto_acceptance = true
 end
 
 Genkan::Engine.configure do |config|
