--- a/lib/generators/genkan/templates/model.erb
+++ b/lib/generators/genkan/templates/model.erb
@@ -1,3 +1,6 @@
 class <%= model_class_name %> < ApplicationRecord
+<% if table_name_prefix -%>
+  self.table_name_prefix = "<%= table_name_prefix %>_"
+<% end -%>
   include Genkan::Auth
 end
