--- a/lib/generators/genkan/templates/initializer.erb
+++ b/lib/generators/genkan/templates/initializer.erb
@@ -1,6 +1,7 @@
 Genkan.configure do |config|
-  config.user_class_name = '<%= model_class_name %>'
-  config.auto_acceptance = true
+  config.user_class_name   = '<%= model_class_name %>'
+  config.auto_acceptance   = true
+  config.cookie_expiration = 1.week
 end
 
 Genkan::Engine.configure do |config|
