--- a/lib/generators/genkan/templates/initializer.erb
+++ b/lib/generators/genkan/templates/initializer.erb
@@ -13,9 +13,10 @@ Genkan::Engine.configure do |config|
   #     ENV['GOOGLE_OAUTH_CLIENT_ID'],
   #     ENV['GOOGLE_OAUTH_CLIENT_SECRET'],
   #     {
-  #       name:  'google',
-  #       scope: 'email',
-  #       hd:    'host-domain.com'
+  #       name:       'google',
+  #       scope:      'email',
+  #       hd:         'host-domain.com',
+  #       verify_iss: false
   #     }
   #   )
   # end
