--- a/lib/generators/genkan/templates/migration.erb
+++ b/lib/generators/genkan/templates/migration.erb
@@ -8,7 +8,7 @@ class CreateGenkanUsers < <%= migration_class_name %>
       t.datetime :accepted_at
       t.datetime :banned_at
 
-      t.timestamp
+      t.timestamps
 
       t.index :email, unique: true
       t.index :remember_token, unique: true
